# LimersCapital

./: .env.example  .gitignore  .npmrc  .vercelignore  LICENSE  Limers-Capital-One-Pager.pptx  Limers-Capital-Pitch-Deck-v2.pptx  Limers-Capital-Pitch-Deck-v3.pptx  Limers-Capital-Pitch-Deck.pptx  README.md  caritrade.html  index.html  package-lock.json  package.json  skills-lock.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
anchor/: Anchor.toml
anchor/programs/juice_escrow/: Cargo.toml  README.md
anchor/programs/juice_escrow/src/: error.rs  lib.rs  state.rs
anchor/programs/limer/: Cargo.toml  PHASE2_DISPUTE_DESIGN.md
anchor/programs/limer/src/: lib.rs
cookbook/: 01-wallet-connection.md  02-rpc-and-accounts.md  03-transactions.md  04-spl-tokens.md  05-jupiter-integration.md  06-pdas-and-programs.md  07-anchor-development.md  08-testing.md  09-security-patterns.md  10-caribbean-regulatory.md  README.md
design/: MOBILE_SCREENS.md  tokens.json
docs/: ARCHITECTURE_DECISIONS.md  CONTRIBUTING.md  Caribbean-Capital-Markets-Research-Brief.md  Limers-Capital-Agent-Layer-Build-Checklist.md  Limers-Capital-Agent-Layer-Impact-Analysis.md  Limers-Capital-Market-Cap-Assessment.md  Limers-Capital-Revenue-Model-Analysis.md  Limers-Capital-Security-Audit-Report-April-2026.md  Limers-Capital-TTSE-Tokenization-One-Pager.md  OPERATIONS.md  PROTOCOL_CHARTER.md  SECURITY.md  SECURITY_MODEL.md  TREASURY.md  TREASURY_STRATEGY.md  UNIVERSITY_PARTNERSHIP.md  colosseum-application-package.md  competitive-scorecard.md  credible-finance-outreach-email.md  devnet-dev-notes.md  (+8 more)
(+454 files in other folders)
