[package]
name = "limer"
version = "0.1.0"
description = "Limer Capital on-chain user profiles, gamification, and trade tracking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "limer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
